--- a/addStaff.html
+++ b/addStaff.html
@@ -14,7 +14,7 @@
      <!-- First Navbar -->
 <nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    <span class="navbar-brand-name text-white">Find Result</span>
+    <span class="navbar-brand-name text-white">Create Staff</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
     <!--RC:1320997-->
   </nav>
@@ -393,7 +393,9 @@
                             </div>
                             </div>
                             <!-- Submit button -->
-                            <button type="submit" class="btn btn-success w-100">Submit</button>
+                             <div class="text-center">
+                            <button type="submit" class="btn btn-success">Submit</button>
+                             </div>
                         </form>
                     </div>
                 </div>
