--- a/add.html
+++ b/add.html
@@ -242,7 +242,9 @@
         <input type="file" class="form-control-file" id="studentPicture" accept="image/*" required>
       </div>
       <div>
-        <button type="submit" class="btn btn-success btn-block" >Submit Student</button>
+        <div class="text-center">
+        <button type="submit" class="btn btn-success" >Submit Student</button>
+        </div>
     </div> 
     </form>
    
