--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
 <!-- Login Form -->
 <div class="container">
   <form action="/login" method="POST" class="border p-4 shadow-sm rounded">
-    <div class="card-header text-center">
+    <div class="card-header text-center bg-info">
       Staff Login
     </div>
     <div class="card-body">
