--- a/extra-curriculum-assessment.html
+++ b/extra-curriculum-assessment.html
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assessment of Student Conduct and Development</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link rel="stylesheet" href="extra.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- First Navbar (Images and Admin Dashboard Text) -->
-    <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-        <!-- Left image (Education Cap) -->
-        <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-        
-        <!-- Navbar brand (Admin Dashboard text) centered -->
-        <span class="navbar-brand mx-auto text-dark">Staff&nbsp;&nbsp;Dashboard</span>
-        
-        <!-- Right image logo -->
-        <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
-    </nav>
-  
+    <!-- First Navbar -->
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
+    <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+    <span class="navbar-brand-name text-white">Extra Activities</span>
+    <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+    <!--RC:1320997-->
+  </nav>
     <!-- Second Navbar (Navbar Items) -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
         <!-- Toggler for mobile view -->
@@ -62,7 +58,9 @@
                     <label for="password">Password:</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <div class="text-center">
+                <button type="submit" class="btn btn-success">Login</button>
+                </div>
             </form>
         </div>
 
@@ -86,7 +84,9 @@
                     <option value="2026/2027">2026/2027</option>
                 </select>
             </div>
-            <button id="loadStudentsBtn" class="btn btn-success btn-block">Load Students</button>
+            <div class="text-center">
+            <button id="loadStudentsBtn" class="btn btn-success">Load Students</button>
+            </div>
         </div>
         <!-- Student List and Assessments -->
         <div id="studentList" style="display: none;">
@@ -100,41 +100,60 @@
             <div id="studentsContainer" class="container">
                 <!-- Dynamically populated student assessment forms will appear here -->
             </div>
-            <button id="submitBtn" class="btn btn-success btn-block mt-3">Submit Assessments</button>
+            <div class="text-center">
+            <button id="submitBtn" class="btn btn-success  mt-3">Submit Assessments</button>
+            </div>
         </div>
        <button class="close-btn text-center" onclick="goBack()">Close</button>
 
     </div><br><br>
-
-    <!-- Footer -->
-    <div class="footer bg-light mt-5">
-        <div class="row text-center py-3">
-            <div class="col-md-4">
-                <p><strong>Imam Hafsin Model International School</strong></p>
-                <p>622, Yakasai Street, Tal'udu G/Kaya</p>
-                <p>Email: imamhafsin@gmail.com</p>
-                <p>Phone: 08030999939939399</p>
-            </div>
-            <div class="col-md-4">
-                <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-facebook"></i> Facebook
-                </a>
-                <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-instagram"></i> Instagram
-                </a>
-                <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-twitter"></i> Twitter
-                </a>
-                <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-                    <i class="fab fa-whatsapp"></i> WhatsApp
-                </a>
-            </div>
-            <div class="col-md-4">
-                <p>&copy; IHMIS 2024</p>
-                <p>All rights reserved.</p>
-            </div>
+ <!-- Footer -->
+ <footer class="footer bg-info text-dark mt-5 py-3">
+    <div class="container">
+        <div class="text-center mb-2">
+            <h6 class="mb-1">Dedicated to Excellence in Education</h6>
+            <p class="small mb-2">Join us in providing quality education that shapes tomorrow's leaders.</p>
         </div>
     </div>
+  
+    <div class="row text-center">
+        <div class="col-md-4">
+            <h6 class="mb-1">Call Us</h6>
+            <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654" class="text-light">08142458654</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Email Us</h6>
+            <p class="small mb-0 text-dark"><i class="fas fa-envelope"></i> <a href="mailto:info@imamhafsin.com.ng" class="text-light">info@imamhafsin.com.ng</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Visit Us</h6>
+            <p class="small mb-0 text-white">Imam Hafsin Model International School</p>
+            <p class="small mb-0 text-white">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+            <p class="small mb-0 text-white">Kano State, Nigeria</p>
+        </div>
+    </div>
+  
+    <div class="social-icons text-center mt-2">
+        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/prof_johndoe" target="_blank" class="text-dark me-2" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://wa.me/1234567890" target="_blank" class="text-dark" aria-label="WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+  
+    <div class="text-center mt-2">
+        <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
+    </div>
+  </footer>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+  
 
     <!-- Back to top button -->
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
