--- a/studentLogin.html
+++ b/studentLogin.html
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Login</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <!-- First Navbar -->
-   <!-- First Navbar -->
-   <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-    <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
-    <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
-  </nav>
-  
+
+  <!-- First Navbar -->
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
+  <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+  <span class="navbar-brand-name text-white">student login</span>
+  <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+  <!--RC:1320997-->
+</nav>  
   <!-- Second Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
     <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
@@ -53,7 +54,7 @@
 
   <div class="container center-form">
     <div class="form-container">
-      <h1 class="text-center mb-4">Student Login</h1>
+      <h1 class="text-center mb-4 bg-info">Student Login</h1>
       <form id="loginForm" class="login-form" action="/login" method="post">
         <div class="form-group">
           <label for="username">Username:</label>
@@ -63,7 +64,9 @@
           <label for="password">Password:</label>
           <input type="password" class="form-control" id="password" name="password" required>
         </div>
-        <button type="submit" class="btn btn-success btn-block btn-login">Submit</button>
+        <div class="text-center">
+        <button type="submit" class="btn btn-success  btn-login">Submit</button>
+        </div>
       </form>
   </div>
   </div>
@@ -129,41 +132,57 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>
 
   <br> <!-- Footer -->
-  <div class="footer bg-light mt-5">
-   <div class="row text-center py-3">
-     <div class="col-md-4">
-       <p><strong>Imam Hafsin Model International School</strong></p>
-       <p>622, Yakasai Street, Tal'udu G/Kaya</p>
-       <p>Email: imamhafsin@gmail.com</p>
-       <p>Phone: 08030999939939399</p>
+  <footer class="footer bg-info text-dark mt-5 py-3">
+     <div class="container">
+         <div class="text-center mb-2">
+             <h6 class="mb-1">Dedicated to Excellence in Education</h6>
+             <p class="small mb-2">Join us in providing quality education that shapes tomorrow's leaders.</p>
+         </div>
      </div>
-     <div class="col-md-4">
-       <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-         <i class="fab fa-facebook"></i> Facebook
-       </a>
-       <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-         <i class="fab fa-instagram"></i> Instagram
-       </a>
-       <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-         <i class="fab fa-twitter"></i> Twitter
-       </a>
-       <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-         <i class="fab fa-whatsapp"></i> WhatsApp
-       </a>
+   
+     <div class="row text-center">
+         <div class="col-md-4">
+             <h6 class="mb-1">Call Us</h6>
+             <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654" class="text-light">08142458654</a></p>
+         </div>
+         <div class="col-md-4">
+             <h6 class="mb-1">Email Us</h6>
+             <p class="small mb-0 text-dark"><i class="fas fa-envelope"></i> <a href="mailto:info@imamhafsin.com.ng" class="text-light">info@imamhafsin.com.ng</a></p>
+         </div>
+         <div class="col-md-4">
+             <h6 class="mb-1">Visit Us</h6>
+             <p class="small mb-0 text-white">Imam Hafsin Model International School</p>
+             <p class="small mb-0 text-white">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+             <p class="small mb-0 text-white">Kano State, Nigeria</p>
+         </div>
      </div>
-     <div class="col-md-4">
-       <p>&copy; IHMIS 2024</p>
-       <p>All rights reserved.</p>
+   
+     <div class="social-icons text-center mt-2">
+         <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Facebook">
+             <i class="fab fa-facebook-f"></i>
+         </a>
+         <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Instagram">
+             <i class="fab fa-instagram"></i>
+         </a>
+         <a href="https://twitter.com/prof_johndoe" target="_blank" class="text-dark me-2" aria-label="Twitter">
+             <i class="fab fa-twitter"></i>
+         </a>
+         <a href="https://wa.me/1234567890" target="_blank" class="text-dark" aria-label="WhatsApp">
+             <i class="fab fa-whatsapp"></i>
+         </a>
      </div>
-   </div>
- </div>
+   
+     <div class="text-center mt-2">
+         <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
+     </div>
+ </footer>
  <!-- Back to top button -->
  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
  
