--- a/student_term_result.html
+++ b/student_term_result.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Students</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <link rel="stylesheet" href="view.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-     <!-- First Navbar -->
-<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+       
+  <!-- First Navbar -->
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    <span class="navbar-brand mx-auto text-dark">Student&nbsp;&nbsp;Dashboard</span>
+    <span class="navbar-brand-name text-white">Terminal Result</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
-  </nav>
-  
+    <!--RC:1320997-->
+  </nav>  
   <!-- Second Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
     <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
@@ -48,7 +50,7 @@
    <!-- Content Container -->
    <!-- Content Container -->
 <div class="center-container bg-light mt-auto">
-    <h5 id="select-class-header" class="text-center">Enter Student ID and View Results</h5>
+    <h5 id="select-class-header" class="text-center">Get The Student Results</h5>
     <div id="studentIDSelection" class="card shadow mt-4 p-4">
         <div class="form-group">
             <label for="studentID">Student ID:</label>
@@ -76,43 +78,61 @@
                 <option value="2026/2027">2026/2027</option>
             </select>
         </div>
+        <div class="text-center">
         <button id="view-students" type="button" class="btn btn-success">View Students</button>
+        </div>
     </div>
     <button id="back-to-selection" type="button" class="btn btn-success mt-3" style="display: none;">Back to Class Selection</button>
     <h4 id="selected-class-header" class="mt-4" style="display: none;"></h4>
     <ul id="student-list" class="list-unstyled"></ul>
-    <button class="close-btn text-center" onclick="goBack()">Close</button>
 </div>
+<button class="close-btn text-center" onclick="goBack()">Close</button>
 
    <!-- Footer -->
-   <div class="footer bg-light mt-5">
-       <div class="row text-center py-3">
-           <div class="col-md-4">
-               <p><strong>Imam Hafsin Model International School</strong></p>
-               <p>622, Yakasai Street, Tal'udu G/Kaya</p>
-               <p>Email: imamhafsin@gmail.com</p>
-               <p>Phone: 08030999939939399</p>
-           </div>
-           <div class="col-md-4">
-               <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                   <i class="fab fa-facebook"></i> Facebook
-               </a>
-               <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-                   <i class="fab fa-instagram"></i> Instagram
-               </a>
-               <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-                   <i class="fab fa-twitter"></i> Twitter
-               </a>
-               <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-                   <i class="fab fa-whatsapp"></i> WhatsApp
-               </a>
-           </div>
-           <div class="col-md-4">
-               <p>&copy; IHMIS 2024</p>
-               <p>All rights reserved.</p>
-           </div>
-       </div>
-   </div>
+   <footer class="footer bg-info text-dark mt-5 py-3">
+    <div class="container">
+        <div class="text-center mb-2">
+            <h6 class="mb-1">Dedicated to Excellence in Education</h6>
+            <p class="small mb-2">Join us in providing quality education that shapes tomorrow's leaders.</p>
+        </div>
+    </div>
+  
+    <div class="row text-center">
+        <div class="col-md-4">
+            <h6 class="mb-1">Call Us</h6>
+            <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654" class="text-light">08142458654</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Email Us</h6>
+            <p class="small mb-0 text-dark"><i class="fas fa-envelope"></i> <a href="mailto:info@imamhafsin.com.ng" class="text-light">info@imamhafsin.com.ng</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Visit Us</h6>
+            <p class="small mb-0 text-white">Imam Hafsin Model International School</p>
+            <p class="small mb-0 text-white">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+            <p class="small mb-0 text-white">Kano State, Nigeria</p>
+        </div>
+    </div>
+  
+    <div class="social-icons text-center mt-2">
+        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/prof_johndoe" target="_blank" class="text-dark me-2" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://wa.me/1234567890" target="_blank" class="text-dark" aria-label="WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+  
+    <div class="text-center mt-2">
+        <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
+    </div>
+</footer>
 
    <!-- Back to Top Button -->
    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
