--- a/student_term_result.html
+++ b/student_term_result.html
@@ -50,7 +50,7 @@
    <!-- Content Container -->
    <!-- Content Container -->
 <div class="center-container bg-light mt-auto">
-    <h5 id="select-class-header" class="text-center">Get The Student Results</h5>
+    <h5 id="select-class-header" class="text-center">Get The Terminal Results</h5>
     <div id="studentIDSelection" class="card shadow mt-4 p-4">
         <div class="form-group">
             <label for="studentID">Student ID:</label>
