--- a/password_reset.html
+++ b/password_reset.html
@@ -72,8 +72,9 @@
   <div class="form-group">
     <label id="securityQuestionLabel"></label>
     <input type="text" name="securityAnswer" class="form-control" placeholder="Enter your answer" required>
+    <div class="text-center">
+  <button type="submit" class="btn btn-success">Submit Answer</button>
   </div>
-  <button type="submit" class="btn btn-info btn-block">Submit Answer</button>
 </form>
 
 <!-- Reset Password Form (Initially hidden, shown when the answer is correct) -->
@@ -86,7 +87,9 @@
   <div class="form-group">
     <input type="password" name="confirmPassword" class="form-control" placeholder="Confirm New Password" required>
   </div>
-  <button type="submit" class="btn btn-warning btn-block">Reset Password</button>
+  <div class="text-center">
+  <button type="submit" class="btn btn-warning">Reset Password</button>
+  </div>
 </form>
 
 <!-- Messages Section -->
