--- a/password_reset.html
+++ b/password_reset.html
@@ -53,7 +53,7 @@
   </div>
 </nav>
   <!-- Main content container -->
-  <div class="content">
+  <div class="content mt-3">
     <div class="container">
      <!-- Forgot Password Form -->
 <form id="forgotPasswordForm" action="/forgot-password" method="POST" class="border p-4 shadow-sm rounded mt-3">
@@ -72,9 +72,10 @@
   <div class="form-group">
     <label id="securityQuestionLabel"></label>
     <input type="text" name="securityAnswer" class="form-control" placeholder="Enter your answer" required>
-    <div class="text-center">
-  <button type="submit" class="btn btn-success">Submit Answer</button>
   </div>
+  <div class="text-center">
+  <button type="submit" class="btn btn-info btn-block">Submit Answer</button>
+</div>
 </form>
 
 <!-- Reset Password Form (Initially hidden, shown when the answer is correct) -->
@@ -88,8 +89,8 @@
     <input type="password" name="confirmPassword" class="form-control" placeholder="Confirm New Password" required>
   </div>
   <div class="text-center">
-  <button type="submit" class="btn btn-warning">Reset Password</button>
-  </div>
+  <button type="submit" class="btn btn-warning btn-block">Reset Password</button>
+</div>
 </form>
 
 <!-- Messages Section -->
