--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
 <!-- First Navbar -->
 <nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
 <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-<span class="navbar-brand-name text-white">password Reset</span>
+<span class="navbar-brand-name text-white">Staff Signup</span>
 <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
 <!--RC:1320997-->
 </nav>
