--- a/staff_dashboard.html
+++ b/staff_dashboard.html
@@ -93,7 +93,7 @@
               <div class="id-card">
                   <div class="modal-header-content">
                       <img src="logo.jpg" alt="School Logo" class="id-card-logo">
-                      <h6 class="modal-title">Imam Hafsin Model International School <br>622, Yakasai Street, Tal'udu G/Kaya<br>Gwale L.G.A, Kano State, Nigeria. </h6>
+                      <h6 class="modal-title">Imam Hafsin Model International School<br>No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA<br>Kano State, Nigeria.</h6>
                       <h5 class="modal-title" style="text-decoration: underline;">Staff ID Card</h5>
                   </div>
                   <img id="modal-teacher-profile-picture" src="default-profile.png" alt="Profile Picture" class="profile-picture mb-3">
@@ -109,10 +109,10 @@
               <div class="id-card-back">
                   <h5>Usage Policy</h5>
                   <p>This ID card is issued to staff members for identification purposes at Imam Hafsin Model International School. It remains the property of the school and must be surrendered upon request. The card is non-transferable and should only be used by the authorized individual. For security reasons, it must be signed upon receipt. If found, please return it to:</p>
-                  <p>Imam Hafsin Model International School<br>622, Yakasai Street, Tal'udu G/Kaya<br>Gwale L.G.A, Kano State, Nigeria.</p>
+                  <p>Imam Hafsin Model International School<br>No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA<br>Kano State, Nigeria.</p>
                   <p>Contact:</p>
-                  <p>08030999939939399</p>
-                  <p><a href="mailto:1440shamsusabo@gmail.com">imamhafsin@gmail.com</a></p>
+                  <p>08142458654</p>
+                  <p><a href="mailto:info@imamhafsin.com.ng">info@imamhafsin.com.ng</a></p>
               </div>
           </div>
           <div class="modal-footer">
